// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: CodeTags prop code is marked as required 1`] = `
<span
  className="code-tags code-tags-primary"
/>
`;

exports[`Component: CodeTags prop type is marked as required 1`] = `
<span
  className="code-tags code-tags-undefined"
>
  test
</span>
`;

exports[`Component: CodeTags renders with class code-tags-primary when primary is provided as type 1`] = `
<span
  className="code-tags code-tags-primary"
>
  test
</span>
`;

exports[`Component: CodeTags renders with class code-tags-secondary when secondary is provided as type 1`] = `
<span
  className="code-tags code-tags-secondary"
>
  test
</span>
`;
